--- a/pages/en/workingwithsessions.mdx
+++ b/pages/en/workingwithsessions.mdx
@@ -17,7 +17,7 @@ Whether done well in advance or within minutes of the meeting's start time, the 
 	1. You will be presented a language dropdown, useful if you wish to manually enforce the language instead of using the automatic language detection.
 	1. You will be asked if you wish to have images automatically described.
 		1. Note that Scribe's image description will only attempt to describe images that lack alt text.
-	1. Lastly, you will be asked if you wish to allow the downloading of slides. Once you are done 
+	1. Lastly, you will be asked if you wish to allow the downloading of slides.
 1. Once you click "Done," Scribe will process the slides for your meeting. A percentage bar will report progress on this.
 1. Once the slides have been processed, you will be given the chance to copy a message containing the Scribe for Meetings participant link to the clipboard. You should post this in the meeting chat, in an email to your participants, or via any other accessible means.
 1. Within a few minutes of the participant clicking the link and initiating the join process, the Scribe Bot will attempt to join your meeting. If you have a waiting room, you will need to allow the bot entry into your meeting manually once you receive the alert from your video conferencing platform. In either case, the Scribe Bot will patiently await your screenshare.
