--- a/src/content/docs/de/localization.mdx
+++ b/src/content/docs/de/localization.mdx
@@ -2,12 +2,9 @@
 title: Lokalisierung
 ---
 
-Remote Incident Manager wird derzeit mit 6 Hauptsprachen ausgeliefert, weitere werden im Laufe der Zeit hinzugefügt. Wenn Ihr Systemgebietsschema zu den von RIM unterstützten Sprachen gehört, wird RIM die von Ihnen angegebene Sprache verwenden.
+Scribe for Meetings wird derzeit mit 6 Hauptsprachen ausgeliefert, weitere werden im Laufe der Zeit hinzugefügt. Wenn Ihr Systemgebietsschema zu den von Scribe for Meetings unterstützten Sprachen gehört, wird die Benutzeroberfläche in der von Ihnen gewählten Sprache angezeigt. Beachten Sie, dass der Inhalt der Präsentation weiterhin in der Sprache des Originaldokuments angezeigt wird.
 
-# Umschalten der Sprache
+## Umschalten der Sprache
 
-Unabhängig davon, ob Sie sich im Controller- oder im Zielmodus befinden, zeigt Remote Incident Manager am unteren Rand des Bildschirms eine Schaltfläche zur Sprachauswahl an. Wenn Sie auf diese Schaltfläche klicken, wird eine Liste mit Sprachen angezeigt. Wählen Sie die gewünschte Sprache aus, und klicken Sie dann auf die Schaltfläche "Sprache wechseln".
+Scribe for Meetings zeigt am unteren Rand des Bildschirms eine Schaltfläche zur Sprachauswahl an. Wenn Sie auf diese Schaltfläche klicken, wird eine Liste mit Sprachen angezeigt. Wählen Sie die gewünschte Sprache aus und klicken Sie dann auf die Schaltfläche "Sprache wechseln".
 
-# Weitere Sprachen
-
-Wir freuen uns über Beiträge von Einzelpersonen und Unternehmen zu weiteren Sprachen. Informationen darüber, wie Sie Sprachen beitragen können, finden Sie unter [Besuchen Sie das Localization Repository auf Github](https://github.com/PneumaSolutions/rim-localization)
