--- a/src/content/docs/es/localization.mdx
+++ b/src/content/docs/es/localization.mdx
@@ -2,12 +2,9 @@
 title: Localización
 ---
 
-Actualmente, Remote Incident Manager se distribuye en 6 idiomas principales, a los que se irán añadiendo más con el tiempo. Si la configuración regional de su sistema se encuentra entre los idiomas admitidos por RIM, RIM utilizará el idioma especificado.
+Scribe for Meetings se distribuye actualmente en 6 idiomas principales, a los que se irán añadiendo más con el tiempo. Si la configuración regional de su sistema se encuentra entre los idiomas admitidos en Scribe for Meetings, la interfaz de usuario utilizará el idioma elegido. Tenga en cuenta que el contenido de la presentación se seguirá presentando en el idioma del documento original.
 
-# Cambiar de idioma
+## Cambiar de idioma
 
-Tanto si está en modo controlador como en modo destino, Remote Incident Manager muestra un botón selector de idioma en la parte inferior de la pantalla. Al hacer clic en él, aparecerá una lista de idiomas. Seleccione el idioma deseado y haga clic en el botón "Cambiar idioma".
+Scribe for Meetings muestra un botón selector de idioma en la parte inferior de la pantalla. Al hacer clic en él, aparecerá una lista de idiomas. Seleccione el idioma deseado y, a continuación, haga clic en el botón "Cambiar idioma".
 
-# Idiomas adicionales
-
-Agradecemos las contribuciones de idiomas adicionales, tanto de particulares como de entidades. Para obtener información sobre cómo contribuir con idiomas, [Visite el repositorio de Localización en Github](https://github.com/PneumaSolutions/rim-localization)
