--- a/src/content/docs/it/localization.mdx
+++ b/src/content/docs/it/localization.mdx
@@ -2,12 +2,9 @@
 title: Localizzazione
 ---
 
-Remote Incident Manager viene attualmente fornito con 6 lingue principali, a cui se ne aggiungeranno altre nel tempo. Se il locale del sistema è tra le lingue supportate da RIM, RIM utilizzerà la lingua specificata.
+Scribe for Meetings viene attualmente fornito con 6 lingue principali, a cui se ne aggiungeranno altre nel tempo. Se il locale del sistema è tra le lingue supportate da Scribe for Meetings, l'interfaccia utente utilizzerà la lingua scelta. Il contenuto della presentazione sarà comunque presentato nella lingua del documento originale.
 
-# Cambio di lingua
+## Cambiare lingua
 
-Sia in modalità controller che in modalità target, Remote Incident Manager visualizza un pulsante di selezione della lingua nella parte inferiore dello schermo. Facendo clic su questo pulsante viene visualizzato un elenco di lingue. Selezionare la lingua desiderata, quindi fare clic sul pulsante "Cambia lingua".
+Scribe for Meetings visualizza un pulsante di selezione della lingua nella parte inferiore dello schermo. Facendo clic su questo pulsante viene visualizzato un elenco di lingue. Selezionare la lingua desiderata, quindi fare clic sul pulsante "Cambia lingua".
 
-# Lingue aggiuntive
-
-Siamo lieti di contribuire con lingue aggiuntive da parte di individui ed enti. Per informazioni su come contribuire alle lingue, [Visitare il repository di localizzazione su Github](https://github.com/PneumaSolutions/rim-localization)
