--- a/src/content/docs/pt/localization.mdx
+++ b/src/content/docs/pt/localization.mdx
@@ -2,12 +2,9 @@
 title: Localização
 ---
 
-Atualmente, o Remote Incident Manager é fornecido com 6 idiomas principais, e mais idiomas serão adicionados ao longo do tempo. Se a localidade do seu sistema estiver entre os idiomas suportados pelo RIM, ele usará o idioma que você especificou.
+Atualmente, o Scribe for Meetings é fornecido com 6 idiomas principais, e mais idiomas serão adicionados ao longo do tempo. Se a localidade do seu sistema estiver entre os idiomas compatíveis com o Scribe for Meetings, a interface do usuário usará o idioma escolhido. Observe que o conteúdo da apresentação ainda será apresentado no idioma do documento original.
 
-# Mudança de idiomas
+## Alternância de idiomas
 
-Esteja você no modo de controlador ou de destino, o Remote Incident Manager exibe um botão de seleção de idioma na parte inferior da tela. Ao clicar nesse botão, será exibida uma lista de idiomas. Selecione o idioma desejado e clique no botão "Switch language" (Mudar idioma).
+O Scribe for Meetings exibe um botão de seleção de idioma na parte inferior da tela. Ao clicar nesse botão, será exibida uma lista de idiomas. Selecione o idioma desejado e, em seguida, clique no botão "Switch language" (Mudar idioma).
 
-# Idiomas adicionais
-
-Aceitamos contribuições de idiomas adicionais de indivíduos e entidades. Para obter informações sobre como contribuir com idiomas, [Visite o repositório de localização no Github] (https://github.com/PneumaSolutions/rim-localization)
