--- a/src/content/docs/sv/localization.mdx
+++ b/src/content/docs/sv/localization.mdx
@@ -2,12 +2,9 @@
 title: Lokalisering
 ---
 
-Remote Incident Manager levereras för närvarande med 6 större språk, och fler språk kommer att läggas till med tiden. Om ditt systemspråk finns bland de språk som stöds av RIM, kommer RIM att använda det språk du angav.
+Scribe for Meetings levereras för närvarande med 6 större språk, och fler språk kommer att läggas till med tiden. Om ditt systemspråk finns bland de språk som stöds i Scribe for Meetings, kommer användargränssnittet att använda ditt valda språk. Observera att presentationsinnehållet fortfarande kommer att presenteras på det språk som används i originaldokumentet.
 
-# Byta språk
+## Byta språk
 
-Oavsett om du är i kontrollant- eller målläge visar Remote Incident Manager en språkväljarknapp längst ned på skärmen. Om du klickar på denna visas en lista över språk. Välj önskat språk och klicka sedan på knappen "Byt språk".
+Scribe for Meetings visar en språkväljarknapp längst ner på skärmen. Om du klickar på denna visas en lista över språk. Välj önskat språk och klicka sedan på knappen "Byt språk".
 
-# ytterligare språk
-
-Vi välkomnar bidrag med ytterligare språk från både privatpersoner och företag. För information om hur du bidrar med språk, [Besök Localization repository på Github](https://github.com/PneumaSolutions/rim-localization)
