--- a/src/content/docs/en/meetingcontrols.mdx
+++ b/src/content/docs/en/meetingcontrols.mdx
@@ -27,4 +27,24 @@ Scribe for Meetings offers several ways to control the rendering. These clickabl
 ## Downloading slides
 
 Provided the organizer has allowed for slides to be downloaded, Scribe for Meetings offers downloads of the slides in several accessible formats. In order to download slides, follow the below procedure:
-* while in a meeting, activate the "Download Slides" link.
+1. while in a meeting, activate the "Download Slides" link.
+    1. You will be asked to log in.
+1. Choose the file format you would like your slides to be presented as. Your options include:
+    * An accessible web page, with all of the same features as the live presentation, including read aloud
+    * Tagged PDF
+        * Supports large print
+    * MP3, via text-to-speech in about a dozen languages
+        * Additional settings for voice and speaking rate are offered with this conversion.
+    * DAISY, text plus audio
+        * Additional settings for voice and speaking rate are offered with this conversion.
+    * EPUB
+    * Microsoft Word
+        * Supports large print
+    * Braille
+        * Grade 1 (EBAE)
+        * Grade 2 (EBAE)
+        * Unified English Braille (UEB)
+        * and many other languages
+1. After you have customized any optional settings associated with your chosen formt, click the “Prepare Download” button.
+1. Watch your email for the download link. For most formats, the email will arrive within a few minutes. Conversion to audio can take much longer, depending on the length of the slide deck, because speech synthesis is a more time-consuming process than other conversions.
+1. Clicking the link will instantly begin the download.
